--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
   <style>
     html,
     body {
+      color: black;
+      font-family: sans-serif;
+      background-color:hsl(210deg 16.67% 97.65%);
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      background-color: white;
-      color: black;
     }
     tv-channel {
       margin: 100px;
     }
   </style>
   <title>tv-station</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.11.2/cdn/themes/light.css" />
-</head>
+  <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.11.2/cdn/themes/light.css"
+    />
+  </head>
 
-<body>
-  <tv-app name="HAX:TV"></tv-app>
-  <h3>Demo of each element by itself</h3>
-  <tv-channel title="HAX: Wordpress Killer" presenter="Bryan Ollendyke">
-    <p>HAX is a visual web builder for producing content in a “forever” format known as HTML, 
-      with a wrinkle. Imagine being able to reprogram the <strong>strong</strong> tag. While silly, this would 
-      fundamentally change the way you build and develop everything on the web. When we describe HTML as 
-      forever, it’s because the HAX platform is literally a <strong>h-a-x</strong> tag in the browser that we can reprogram 
-      after initial implementation. This means courses written in HAX 5 years ago, never touched by faculty,
-      leveraging advanced JS and CSS yet never known about by faculty, are more accessible, higher in usability,
-      load faster, and are easier to use by students with 0 additional effort by faculty or staff.
-    </p>
-  </tv-channel>
-  <script type="module">
-    import "./src/tv-app.js";
-    import "./src/tv-channel.js";
-  </script>
-</body>
+  <body>
+    <tv-app name="HAX:TV"></tv-app>
 
+    <script type="module">
+      import "./src/tv-app.js";
+     
+    </script>
+    <script
+      type="module"
+      src="https://cdn.skypack.dev/@shoelace-style/shoelace@2.11.2/dist/shoelace.js"
+    ></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.11.2/cdn/shoelace.js"
+    ></script>
+  </body>
 </html>
